Ading src files

--- a/src_files/DataPreProcessFile.ipynb
+++ b/src_files/DataPreProcessFile.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter images directory path : C:\\\\Users\\\\sanya\\\\Desktop\\\\Calgary\\\\ENEL645\\\\Project\\\\images_old\n",
-      "Enter images output path : C:\\\\Users\\\\sanya\\\\Desktop\\\\Calgary\\\\ENEL645\\\\Project\\\\image_arrays\n"
+      "Enter images directory path : C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\images_dataset\n",
+      "Enter images output path : C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\src_files\n"
      ]
     }
    ],
    "source": [
     "# Enter the path name untill 'images' [ Actual images are stored at ...images/sanyam/image0.png]\n",
+    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\images_old\n",
+    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\src_files\n",
+    "\n",
+    "# For our dataset\n",
+    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\images_dataset\n",
+    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\src_files\n",
     "dir_path = input( 'Enter images directory path : ')\n",
     "out_path = input( 'Enter images output path : ')"
    ]
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +97,55 @@
       "Shape of  0 image is (128, 128, 3)\n",
       "The length of the  array is:  128\n",
       "Shape of image data is (128, 128, 3)\n",
+      "Shape of  0 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  0 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  1 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
       "Shape of  1 image is (128, 128, 3)\n",
       "The length of the  array is:  128\n",
       "Shape of image data is (128, 128, 3)\n",
       "Shape of  1 image is (128, 128, 3)\n",
       "The length of the  array is:  128\n",
       "Shape of image data is (128, 128, 3)\n",
-      "Shape of  1 image is (128, 128, 3)\n"
+      "Shape of  1 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  1 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  2 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  2 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  2 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  2 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  2 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  3 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  3 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  3 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  3 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  3 image is (128, 128, 3)\n"
      ]
     }
    ],
@@ -149,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +205,8 @@
      "output_type": "stream",
      "text": [
       "..............................................\n",
-      "No of labels are 6\n",
-      "No of images are 6\n",
+      "No of labels are 20\n",
+      "No of images are 20\n",
       "Shape of each image is (128, 128, 3)\n",
       "..............................................\n"
      ]
@@ -181,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +238,7 @@
      "text": [
       "Initial type of images is <class 'list'>\n",
       "Type of images is  <class 'numpy.ndarray'>\n",
-      "Shape of the images array is  (6, 128, 128, 3)\n",
+      "Shape of the images array is  (20, 128, 128, 3)\n",
       "The shape of the image is (128, 128, 3)\n"
      ]
     }
@@ -212,59 +260,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If the sample1[i] and sample2[i] has the image of the same person, then putitng that label as 1 else 0\n",
-    "samples_1 = list()\n",
-    "samples_2 = list()\n",
-    "labels = list()\n",
-    "for i in range( 6 ) :\n",
-    "    for j in range( 6 ) :\n",
-    "        samples_1.append( images_array[i] )\n",
-    "        samples_2.append( images_array[j] )\n",
-    "        if i < 3 :\n",
-    "            if j < 3 :\n",
-    "                labels.append( 1 )\n",
-    "            else:\n",
-    "                labels.append( 0 )\n",
-    "        else :\n",
-    "            if j > 2 :\n",
-    "                labels.append( 1 )\n",
-    "            else:\n",
-    "                labels.append( 0 )\n",
+    "# samples_1 = list()\n",
+    "# samples_2 = list()\n",
+    "# labels = list()\n",
+    "# for i in range( 6 ) :\n",
+    "#     for j in range( 6 ) :\n",
+    "#         samples_1.append( images_array[i] )\n",
+    "#         samples_2.append( images_array[j] )\n",
+    "#         if i < 3 :\n",
+    "#             if j < 3 :\n",
+    "#                 labels.append( 1 )\n",
+    "#             else:\n",
+    "#                 labels.append( 0 )\n",
+    "#         else :\n",
+    "#             if j > 2 :\n",
+    "#                 labels.append( 1 )\n",
+    "#             else:\n",
+    "#                 labels.append( 0 )\n",
     "\n",
-    "X1 = np.array( samples_1 )\n",
-    "X2 = np.array( samples_2 )\n",
-    "Y = np.array( labels )"
+    "# X1 = np.array( samples_1 )\n",
+    "# X2 = np.array( samples_2 )\n",
+    "# Y = np.array( labels )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of m is 0\n",
+      "Value of m is 0\n",
+      "Value of m is 0\n",
+      "Value of m is 0\n",
+      "Value of m is 0\n",
+      "Value of m is 1\n",
+      "Value of m is 1\n",
+      "Value of m is 1\n",
+      "Value of m is 1\n",
+      "Value of m is 1\n",
+      "Value of m is 2\n",
+      "Value of m is 2\n",
+      "Value of m is 2\n",
+      "Value of m is 2\n",
+      "Value of m is 2\n",
+      "Value of m is 3\n",
+      "Value of m is 3\n",
+      "Value of m is 3\n",
+      "Value of m is 3\n",
+      "Value of m is 3\n"
+     ]
+    }
+   ],
    "source": [
     "# For our dataset of 5 images for 5 team members\n",
     "\n",
-    "# samples_1 = list()\n",
-    "# samples_2 = list()\n",
-    "# labels = list()\n",
-    "# for i in range( 25 ) :\n",
-    "#     m  = i//5\n",
-    "#     print('Value of m is', m)\n",
-    "#     for j in range( 25 ) :\n",
-    "#         samples_1.append( images_array[i] )\n",
-    "#         samples_2.append( images_array[j] )\n",
-    "#         if((j>= 5*m) & (j<= (5*(m+1)-1))):\n",
-    "#             labels.append( 1 )\n",
-    "#         else :\n",
-    "#             labels.append( 0 )\n",
+    "samples_1 = list()\n",
+    "samples_2 = list()\n",
+    "labels = list()\n",
+    "for i in range( 20 ) :\n",
+    "    m  = i//5\n",
+    "    print('Value of m is', m)\n",
+    "    for j in range( 20 ) :\n",
+    "        samples_1.append( images_array[i] )\n",
+    "        samples_2.append( images_array[j] )\n",
+    "        if((j>= 5*m) & (j<= (5*(m+1)-1))):\n",
+    "            labels.append( 1 )\n",
+    "        else :\n",
+    "            labels.append( 0 )\n",
     "\n",
-    "# X1 = np.array( samples_1 )\n",
-    "# X2 = np.array( samples_2 )\n",
-    "# Y = np.array( labels)"
+    "X1 = np.array( samples_1 )\n",
+    "X2 = np.array( samples_2 )\n",
+    "Y = np.array( labels)"
    ]
   },
   {
@@ -276,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of array of first set of images is (36, 128, 128, 3)\n",
-      "Shape of array of second set of images is (36, 128, 128, 3)\n",
-      "Number of labels are  36\n"
+      "Shape of array of first set of images is (400, 128, 128, 3)\n",
+      "Shape of array of second set of images is (400, 128, 128, 3)\n",
+      "Number of labels are  400\n"
      ]
     }
    ],
@@ -297,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,20 +383,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1]\n"
+      "[1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
    "source": [
     "print(labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
