Adding all the files

--- a/src_files/DataPreProcessFile.ipynb
+++ b/src_files/DataPreProcessFile.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
    ],
    "source": [
     "# Enter the path name untill 'images' [ Actual images are stored at ...images/sanyam/image0.png]\n",
-    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\images_old\n",
+    "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\images_dataset\n",
     "# C:\\Users\\sanya\\Desktop\\Calgary\\ENEL645\\Siamese_Face_Project\\Enel645_FaceDetection_SiameseModel\\src_files\n",
     "\n",
     "# For our dataset\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,22 @@
       "Shape of  3 image is (128, 128, 3)\n",
       "The length of the  array is:  128\n",
       "Shape of image data is (128, 128, 3)\n",
-      "Shape of  3 image is (128, 128, 3)\n"
+      "Shape of  3 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  4 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  4 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  4 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  4 image is (128, 128, 3)\n",
+      "The length of the  array is:  128\n",
+      "Shape of image data is (128, 128, 3)\n",
+      "Shape of  4 image is (128, 128, 3)\n"
      ]
     }
    ],
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +220,8 @@
      "output_type": "stream",
      "text": [
       "..............................................\n",
-      "No of labels are 20\n",
-      "No of images are 20\n",
+      "No of labels are 25\n",
+      "No of images are 25\n",
       "Shape of each image is (128, 128, 3)\n",
       "..............................................\n"
      ]
@@ -229,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +253,7 @@
      "text": [
       "Initial type of images is <class 'list'>\n",
       "Type of images is  <class 'numpy.ndarray'>\n",
-      "Shape of the images array is  (20, 128, 128, 3)\n",
+      "Shape of the images array is  (25, 128, 128, 3)\n",
       "The shape of the image is (128, 128, 3)\n"
      ]
     }
@@ -260,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +301,12 @@
       "Value of m is 3\n",
       "Value of m is 3\n",
       "Value of m is 3\n",
-      "Value of m is 3\n"
+      "Value of m is 3\n",
+      "Value of m is 4\n",
+      "Value of m is 4\n",
+      "Value of m is 4\n",
+      "Value of m is 4\n",
+      "Value of m is 4\n"
      ]
     }
    ],
@@ -296,10 +316,10 @@
     "samples_1 = list()\n",
     "samples_2 = list()\n",
     "labels = list()\n",
-    "for i in range( 20 ) :\n",
+    "for i in range( 25 ) :\n",
     "    m  = i//5\n",
     "    print('Value of m is', m)\n",
-    "    for j in range( 20 ) :\n",
+    "    for j in range( 25 ) :\n",
     "        samples_1.append( images_array[i] )\n",
     "        samples_2.append( images_array[j] )\n",
     "        if((j>= 5*m) & (j<= (5*(m+1)-1))):\n",
@@ -321,16 +341,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of array of first set of images is (400, 128, 128, 3)\n",
-      "Shape of array of second set of images is (400, 128, 128, 3)\n",
-      "Number of labels are  400\n"
+      "Shape of array of first set of images is (625, 128, 128, 3)\n",
+      "Shape of array of second set of images is (625, 128, 128, 3)\n",
+      "Number of labels are  625\n"
      ]
     }
    ],
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1]\n"
+      "[1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
